@@ -27,7 +27,7 @@ CORBA::Boolean both_read_write_ = false;
 void
 split_qos (const char * qos)
 {
-  char* buf = ACE_OS::strdup (name);
+  char* buf = ACE_OS::strdup (qos);
   ACE_Tokenizer_T<char> tok (buf);
   tok.delimiter_replace ('#', 0);
   for (char *p = tok.next (); p; p = tok.next ())
