@@ -57,7 +57,7 @@ class DummyListener: public DDSDataReaderListener
 void
 split_qos (const char * qos)
 {
-  char* buf = ACE_OS::strdup (name);
+  char* buf = ACE_OS::strdup (qos);
   ACE_Tokenizer_T<char> tok (buf);
   tok.delimiter_replace ('#', 0);
   for (char *p = tok.next (); p; p = tok.next ())
